# keybackup

./: README.md  build.sh
key_backup/: CMakeLists.txt
key_backup/app/: CMakeLists.txt  backup_key.sh  clearKey.c  client.c  common.h  common_extra.h  data.txt  encryptData.c  export_lib.sh  gen_crt.sh  generateKey.c  hmacKey.c  keybackup.conf  libcore.c  libcore.h  mount.sh  pure.c  restore_key.sh  run_server.sh  scp_auto.expect  server.c
key_backup/app/ca_key/: ca.crt  ca.key
key_backup/app/cmake/: config.cmake  import_pufse.cmake
key_backup/cmake/: arm-linux-gnueabihf.cmake  config.cmake  import_pufse.cmake
lib/openssl/: build.sh  decompress.sh  download.sh  export_openssl.sh  scp_auto.expect
lib/pufse-host-lib/pufse/inc/: pufs_basic.h  pufs_chacha.h  pufs_cmac.h  pufs_drbg.h  pufs_hmac.h  pufs_ka.h  pufs_kdf.h  pufs_pkc.h  pufs_rt.h  pufs_sp38a.h  pufs_sp38c.h  pufs_sp38d.h  pufs_sp38e.h
